Fix horizontal scroll

--- a/resources/assets/scss/components/adminltefix.scss
+++ b/resources/assets/scss/components/adminltefix.scss
@@ -2,6 +2,12 @@
   overflow-x: hidden;
 }
 
+.wrapper .content-wrapper .content.body {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid transparent;
+}
+
 .row-image {
   text-align: center;
 }
